[workspace]
members = [
    "src/enet",
    "src/ngsbase",
    "src/ngscom",
    "src/ngsengine",
    "src/ngsgamegfx",
    "src/ngsgfx",
    "src/ngsgfx/src/backend/metal",
    "src/ngsgfx/src/backend/metal/src/spirv-cross",
    "src/ngsgfx/src/backend/metal/src/metal-rs",
    "src/ngsgfx/src/backend/vulkan",
    "src/ngsgfx/src/common",
    "src/ngsgfx/src/core",
    "src/ngsgfx/src/debug",
    "src/ngsgfx/src/wsi_core",
    "src/ngsgfx/src/wsi/metal",
    "src/ngsgfx/src/wsi/vulkan",
    "src/ngspf",
    "src/ngspf/src/canvas",
    "src/ngspf/src/com",
    "src/ngspf/src/core",
    "src/ngspf/src/viewport",
    "src/ngsterrain",
    "src/support/arclock",
    "src/support/attrtext",
    "src/support/fast_msg_send",
    "src/support/itervalues",
    "src/support/itervalues/itervalues_derive",
    "src/support/iterpool",
    "src/support/ngsenumflags",
    "src/support/ngsenumflags/ngsenumflags_derive",
    "src/support/include_data",
    "src/support/prebuild-glslang",
    "src/support/raduga",
    "src/support/refeq",
    "src/support/retire",
    "src/support/tokenlock",
    "src/yfft",
    "src/ysr2",
    "src/ysr2/src/clip",
    "src/ysr2/src/common",
    "src/ysr2/src/filters",
    "src/ysr2/src/localizer",
    "src/ysr2/src/localizer/kemar_data",
    "src/ysr2/src/spatializer",
    "src/xdispatch",
    "src/zangfx",
    "src/zangfx/src/backend/metal",
    "src/zangfx/src/backend/metal/src/spirv-cross",
    "src/zangfx/src/backend/metal/src/metal-rs",
    "src/zangfx/src/backend/vulkan",
    "src/zangfx/src/common",
    "src/zangfx/src/base",
    "src/zangfx/src/test",
    "src/zangfx/src/utils",
]

[profile.release]
lto = true
debug = true

[profile.bench]
lto = true
debug = true
