[workspace]
members = [
    "src/enet",
    "src/ngsbase",
    "src/ngscom",
    "src/ngsengine",
    "src/ngsloader",
    "src/ngsgamegfx",
    "src/ngsgamegfx/src/common",
    "src/ngsgamegfx/src/graph",
    "src/ngspf",
    "src/ngspf/src/canvas",
    "src/ngspf/src/com",
    "src/ngspf/src/core",
    "src/ngspf/src/viewport",
    "src/ngsterrain",
    "src/stygian",
    "src/support/alt_fp",
    "src/support/arclock",
    "src/support/asynclazy",
    "src/support/attrtext",
    "src/support/atom2",
    "src/support/itervalues",
    "src/support/itervalues/itervalues_derive",
    "src/support/iterpool",
    "src/support/include_data",
    "src/support/injector",
    "src/support/prebuild-glslang",
    "src/support/raduga",
    "src/support/refeq",
    "src/support/retire",
    "src/support/stickylock",
    "src/support/tokenlock",
    "src/support/volatile_view",
    "src/yfft",
    "src/ysr2",
    "src/ysr2/src/clip",
    "src/ysr2/src/common",
    "src/ysr2/src/filters",
    "src/ysr2/src/localizer",
    "src/ysr2/src/localizer/kemar_data",
    "src/ysr2/src/spatializer",
    "src/xdispatch/xdispatch",
    "src/xdispatch/xdispatch-core",
    "src/zangfx",
    "src/zangfx/src/backend/metal",
    "src/zangfx/src/backend/metal/src/spirv-cross",
    "src/zangfx/src/backend/metal/src/metal-rs",
    "src/zangfx/src/backend/vulkan",
    "src/zangfx/src/common",
    "src/zangfx/src/base",
    "src/zangfx/src/test",
    "src/zangfx/src/utils",
]

[profile.release]
debug = true

[profile.bench]
lto = true
debug = true
incremental = false

[patch.crates-io.glium]
git = "https://github.com/yvt/glium"
# “Remove an assertion as a temporary work-around for #1721”
# #1721: <https://github.com/glium/glium/issues/1721>
rev = "8f5354483d22a5617c2258a68f7cb0660e5d3b9a"
