[workspace]
members = [
    "src/enet",
    "src/ngsasset",
    "src/ngsbase",
    "src/ngscom",
    "src/ngsengine",
    "src/ngsloader",
    "src/ngsgamegfx",
    "src/ngsgamegfx/src/common",
    "src/ngsgamegfx/src/graph",
    "src/ngspf",
    "src/ngspf/src/canvas",
    "src/ngspf/src/com",
    "src/ngspf/src/core",
    "src/ngspf/src/viewport",
    "src/ngsterrain",
    "src/stygian",
    "src/support/alt_fp",
    "src/support/arclock",
    "src/support/asynclazy",
    "src/support/attrtext",
    "src/support/atom2",
    "src/support/itervalues",
    "src/support/itervalues/itervalues_derive",
    "src/support/iterpool",
    "src/support/include_data",
    "src/support/injector",
    "src/support/lockable",
    "src/support/prebuild-glslang",
    "src/support/raduga",
    "src/support/refeq",
    "src/support/stickylock",
    "src/support/tokenlock",
    "src/support/volatile_view",
    "src/yfft",
    "src/ysr2",
    "src/ysr2/src/clip",
    "src/ysr2/src/common",
    "src/ysr2/src/filters",
    "src/ysr2/src/localizer",
    "src/ysr2/src/localizer/kemar_data",
    "src/ysr2/src/spatializer",
    "src/xdispatch/xdispatch",
    "src/xdispatch/xdispatch-core",
    "src/zangfx",
    "src/zangfx/src/backend/metal",
    "src/zangfx/src/backend/metal/src/spirv-cross",
    "src/zangfx/src/backend/metal/src/metal-rs",
    "src/zangfx/src/backend/vulkan",
    "src/zangfx/src/common",
    "src/zangfx/src/base",
    "src/zangfx/src/test",
    "src/zangfx/src/utils",
]

[profile.release]
debug = true

[profile.bench]
lto = true
debug = true
incremental = false

[patch.crates-io.glutin]
git = "https://github.com/yvt/glutin"
# “macos: Fix `Context::is_current` incorrectly returning `false`”
# This includes a work-around for this issue:
# <https://github.com/glium/glium/issues/1721>
rev = "17618bff5b7e954ed5af4d49fdc1b40a2b9a68f7"

[patch.crates-io.array]
path = "src/support/array"

[patch.crates-io.query_interface]
git = "https://github.com/yvt/query_interface.git"
rev = "da91498339411afd6acd749353295dc57b9229b2"
