[package]
name = "ngsengine"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
enet = { path = "src/enet" }
lazy_static = { version = "0.2" }
ngsbase = { path = "src/ngsbase" }
ngscom = { path = "src/ngscom" }
ngsgfx = { path = "src/ngsgfx" }
yfft = { path = "src/yfft" }
xdispatch = { path = "src/xdispatch" }
