[package]
name = "ngsengine"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[workspace]
members = [
    "src/enet",
    "src/ngsbase",
    "src/ngscom",
    "src/ngsgfx",
    "src/ngsgfx/tools/include_data",
    "src/ngsgfx/tools/prebuild-glslang",
    "src/ngsgfx/src/backend/metal",
    "src/ngsgfx/src/backend/metal/src/spirv-cross",
    "src/ngsgfx/src/backend/metal/src/metal-rs",
    "src/ngsgfx/src/backend/vulkan",
    "src/ngsgfx/src/common",
    "src/ngsgfx/src/core",
    "src/ngsgfx/src/debug",
    "src/ngsgfx/src/wsi_core",
    "src/ngsgfx/src/wsi/metal",
    "src/ngsgfx/src/wsi/vulkan",
    "src/yfft",
    "src/xdispatch",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
enet = { path = "src/enet" }
lazy_static = { version = "0.2" }
ngsbase = { path = "src/ngsbase" }
ngscom = { path = "src/ngscom" }
ngsgfx = { path = "src/ngsgfx" }
yfft = { path = "src/yfft" }
xdispatch = { path = "src/xdispatch" }

[profile.release]
lto = true
