[workspace]
members = [
    "src/enet",
    "src/ngsbase",
    "src/ngscom",
    "src/ngsengine",
    "src/ngsgfx",
    "src/ngsgfx/tools/include_data",
    "src/ngsgfx/tools/prebuild-glslang",
    "src/ngsgfx/src/backend/metal",
    "src/ngsgfx/src/backend/metal/src/spirv-cross",
    "src/ngsgfx/src/backend/metal/src/metal-rs",
    "src/ngsgfx/src/backend/vulkan",
    "src/ngsgfx/src/common",
    "src/ngsgfx/src/core",
    "src/ngsgfx/src/debug",
    "src/ngsgfx/src/wsi_core",
    "src/ngsgfx/src/wsi/metal",
    "src/ngsgfx/src/wsi/vulkan",
    "src/yfft",
    "src/ysr2",
    "src/ysr2/src/common",
    "src/ysr2/src/filters",
    "src/ysr2/src/localizer",
    "src/ysr2/src/localizer/kemar_data",
    "src/ysr2/src/mixer",
    "src/xdispatch",
]

[profile.release]
lto = true

[profile.bench]
lto = true
