[package]
name = "ngsasset"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[dependencies]
uuid = "0.7.2"
phf_generator = "0.7.24"
phf_shared = "0.7.24"
flatbuffers = "0.5.0"
azure-functions-shared-codegen = "0.4.1"
owning_ref = "0.4.0"
parking_lot = "0.7"
futures-preview = "0.3.0-alpha.13"
lockable = { path = "../support/lockable" }
multicastfuture = { path = "../support/multicastfuture" }
atom2 = { path = "../support/atom2" }
arc-io-error = "0.1.1"

[build-dependencies]
flatc-rust = "0.1.2"
