[package]
name = "ngsbase"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[dependencies]
ngscom = { path = "../ngscom", version = "0.1" }
ngsenumflags = { path = "../support/ngsenumflags" }
ngsenumflags_derive = { path = "../support/ngsenumflags/ngsenumflags_derive" }
cggeom = { path = "../support/cggeom" }
cgmath = "0.15.0"
num-traits = "0.1.37"
rgb = "0.7.2"

[build-dependencies]
walkdir = "1"
