[package]
name = "ngsbase"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[dependencies]
ngscom = { path = "../ngscom", version = "0.1" }
bitflags = "1.0.4"
cggeom = { path = "../support/cggeom" }
cgmath = "0.17.0"
num-traits = "0.2.4"
rgb = "0.8.9"

[build-dependencies]
walkdir = "2.1"
