[package]
name = "ngsengine"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
enet = { path = "../enet" }
ngsbase = { path = "../ngsbase" }
ngscom = { path = "../ngscom" }
ngspf = { path = "../ngspf" }
ngspf_com = { path = "../ngspf/src/com" }
cgmath = "0.16.1"

[dependencies.jemallocator]
version = "0.1.9"
features = ["unprefixed_malloc_on_supported_platforms"]
