[package]
name = "ngsgamegfx"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[dependencies]
arrayvec = "0.4.1"
cgmath = "0.16.1"
either = { version = "1.4" }
flags-macro = "0.1.2"
futures-preview = "0.3.0-alpha.9"
injector = { path = "../support/injector" }
lazy_static = "1.1"
ngspf = { path = "../ngspf" }
pod = "0.5.0"
query_interface = "0.3.4"
rand = "0.6.0"
volatile_view = { path = "../support/volatile_view" }
zangfx = { path = "../zangfx" }

ngsgamegfx_common = { path = "src/common" }
ngsgamegfx_graph = { path = "src/graph" }

[dev-dependencies]
refeq = { path = "../support/refeq" }