[package]
name = "ngsloader"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "0.2"
ngsbase = { path = "../ngsbase" }
ngscom = { path = "../ngscom" }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "3.0.0"

# Official master branch has issues with the lastest Nightly rustc:
#   https://github.com/rust-lang-nursery/stdsimd/issues/404#issuecomment-378482971
[dependencies.coresimd]
git = "https://github.com/AdamNiederer/stdsimd.git"
rev = "d6874383653c8b93832d53092078a41b146be941"
