[package]
name = "ngsloader"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "0.2"
ngsbase = { path = "../ngsbase" }
ngscom = { path = "../ngscom" }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies.raw-cpuid]
git = "https://github.com/gz/rust-cpuid.git"
rev = "3c9612206576616859f0dd9bd12eed5130675f65"
