[package]
name = "ngspf"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[dependencies]
ngspf_core = { path = "src/core" }
ngspf_canvas = { path = "src/canvas" }
ngspf_viewport = { path = "src/viewport" }
cggeom = { path = "../support/cggeom" }

[dev-dependencies]
rand = "0.6.0"
cgmath = "0.16.1"
flags-macro = "0.1.2"
include_data = { path = "../support/include_data" }
attrtext = { path = "../support/attrtext" }
refeq = { path = "../support/refeq" }
ttf-noto-sans = "0.1.1"
lipsum = "0.5.0"

[build-dependencies]
prebuild-glslang = { path = "../support/prebuild-glslang" }
