[package]
name = "stygian"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[dependencies]
arrayvec = "0.4.1"
cgmath = "0.17.0"
ngsterrain = { path = "../ngsterrain" }
num = "0.2.0"
array = "0.0.1"

[dev-dependencies]
bencher = "0.1.5"
clap = "2.26.0"
lazy_static = "1.1"

[dev-dependencies.glium]
git = "https://github.com/yvt/glium"
# “Remove an assertion as a temporary work-around for #1721”
# #1721: <https://github.com/glium/glium/issues/1721>
rev = "8f5354483d22a5617c2258a68f7cb0660e5d3b9a"

[[bench]]
name = "terrainrast"
harness = false