[package]
name = "stygian"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

[features]
default = ["gen"]
gen = ["parking_lot", "ndarray"]

[dependencies]
arrayvec = "0.4.1"
cgmath = "0.17.0"
ngsterrain = { path = "../ngsterrain" }
alt_fp = { path = "../support/alt_fp" }
num = "0.2.0"
array = "0.0.1"
itertools = "0.8.0"
packed_simd = "0.3.0"
bitflags = "1.0.4"
parking_lot = { version = "0.7", optional = true }
ndarray = { version = "0.12.1", optional = true }

[dev-dependencies]
bencher = "0.1.5"
clap = "2.26.0"
lazy_static = "1.1"
xz-decom = "0.2.0"
gltf = "0.11.2"
pod = "0.5.0"

[dev-dependencies.glium]
git = "https://github.com/yvt/glium"
# “Remove an assertion as a temporary work-around for #1721”
# #1721: <https://github.com/glium/glium/issues/1721>
rev = "8f5354483d22a5617c2258a68f7cb0660e5d3b9a"

[[bench]]
name = "terrainrast"
harness = false