[package]
name = "ysr2"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[dependencies]
ysr2_common = { path = "src/common" }
ysr2_filters = { path = "src/filters" }
ysr2_localizer = { path = "src/localizer" }
ysr2_clip = { path = "src/clip" }
ysr2_spatializer = { path = "src/spatializer" }

[dev-dependencies]
portaudio = "0.7.0"
clap = "2.26.0"
cgmath = "0.17.0"
hound = "3.1.0"
byteorder = "1.1.0"
ngsterrain = { path = "../ngsterrain" }

[dev-dependencies.rimd]
git = "https://github.com/RustAudio/rimd.git"
rev = "6e623dbce990605df95635648710d3f0675a615c"
