[package]
name = "ngsgfx"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[features]
default = []

[dependencies]
ngsgfx_core = { path = "src/core" }
winit = "0.6"

[target.'cfg(target_os="macos")'.dependencies]
ngsgfx_metal = { path = "src/backend/metal" }
ngsgfx_wsi_metal = { path = "src/wsi/metal" }