[package]
name = "ngsgfx"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[features]
default = []

[dependencies]
ngsgfx_core = { path = "src/core" }
ngsgfx_debug = { path = "src/debug" }
ngsgfx_wsi_core = { path = "src/wsi_core" }
ngsgfx_vulkan = { path = "src/backend/vulkan" }
ngsgfx_wsi_vulkan = { path = "src/wsi/vulkan" }
cgmath = "0.14.1"

[target.'cfg(target_os="macos")'.dependencies]
ngsgfx_metal = { path = "src/backend/metal" }
ngsgfx_wsi_metal = { path = "src/wsi/metal" }

[[example]]
name = "triangle"

[build-dependencies]
prebuild-glslang = { path = "tools/prebuild-glslang" } # required for examples

[dev-dependencies]
include_data = { path = "tools/include_data" } # required for examples