[package]
name = "ngspf"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[dependencies]
ngsgfx = { path = "../ngsgfx" }
ngsbase = { path = "../ngsbase" }
arclock = { path = "../support/arclock" }
refeq = { path = "../support/refeq", features = ["nightly"] }
tokenlock = { path = "../support/tokenlock" }
iterpool = { path = "../support/iterpool" }
ngsenumflags = { path = "../support/ngsenumflags" }
ngsenumflags_derive = { path = "../support/ngsenumflags/ngsenumflags_derive" }
include_data = { path = "../ngsgfx/tools/include_data" }
cgmath = "0.15.0"
winit = "0.7"
atomic_refcell = "0.1.0"
rgb = "0.7.2"

[build-dependencies]
prebuild-glslang = { path = "../ngsgfx/tools/prebuild-glslang" }

[dev-dependencies]
rand = "0.3.16"
