[package]
name = "ngspf"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[dependencies]
ngsbase = { path = "../ngsbase" }
ngspf_core = { path = "src/core" }
ngspf_canvas = { path = "src/canvas" }
ngspf_viewport = { path = "src/viewport" }

[dev-dependencies]
rand = "0.3.16"
cgmath = "0.15.0"
ngsenumflags = { path = "../support/ngsenumflags" }
include_data = { path = "../support/include_data" }
refeq = { path = "../support/refeq" }
ttf-noto-sans = "0.1.1"

[build-dependencies]
prebuild-glslang = { path = "../support/prebuild-glslang" }
