[package]
name = "ysr2"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[dependencies]
ysr2_common = { path = "src/common" }
ysr2_filters = { path = "src/filters" }
ysr2_localizer = { path = "src/localizer" }
ysr2_mixer = { path = "src/mixer" }

[dev-dependencies]
portaudio = "0.7.0"
rimd = "0.0.1"
clap = "2.26.0"
cgmath = "0.14.1"
