[package]
name = "ysr2"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]

[dependencies]
ysr2_common = { path = "src/common" }
ysr2_filters = { path = "src/filters" }
ysr2_localizer = { path = "src/localizer" }
ysr2_clip = { path = "src/clip" }
ysr2_spatializer = { path = "src/spatializer" }

[dev-dependencies]
portaudio = "0.7.0"
rimd = "0.0.1"
clap = "2.26.0"
cgmath = "0.15.0"
hound = "3.1.0"
byteorder = "1.1.0"
ngsterrain = { path = "../ngsterrain" }
